refactor(catalog): create catalog service
Move business logic from catalog controller to dedicated catalog domain service.