@@ -10,7 +10,7 @@ import java.math.BigDecimal;
 @AllArgsConstructor
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @Getter
-@Builder
+@Builder(toBuilder = true)
 @Entity
 @Table(name = "catalog_item")
 public class CatalogItem extends AbstractEntity {
@@ -54,15 +54,18 @@ public class CatalogItem extends AbstractEntity {
     private CatalogBrand catalogBrand;
 
     /**
-     * If there is sufficient stock of an item, then the integer returned at the end of this call should be the same as quantityDesired.
-     * In the event that there is not sufficient stock available, the method will remove whatever stock is available and return that quantity to the client.
-     * In this case, it is the responsibility of the client to determine if the amount that is returned is the same as quantityDesired.
+     * If there is sufficient stock of an item, then the integer returned at the end of this call should be the same as
+     * quantityDesired.
+     * In the event that there is not sufficient stock available, the method will remove whatever stock is available
+     * and return that quantity to the client.
+     * In this case, it is the responsibility of the client to determine if the amount that is returned is the same as
+     * quantityDesired.
      *
      * @return Returns the number actually removed from stock.
      */
     public int removeStock(int quantityDesired) {
         if (availableStock == 0) {
-            throw new CatalogDomainException(String.format("Empty stock, product item %s is sold out", name));
+            throw new CatalogDomainException("Empty stock, product item %s is sold out".formatted(name));
         }
 
         if (quantityDesired <= 0) {
@@ -79,14 +82,15 @@ public class CatalogItem extends AbstractEntity {
      *
      * @return the quantity that has been added to stock
      */
-    public int addStock(int quantity)
-    {
+    public int addStock(int quantity) {
         int original = availableStock;
 
-        // The quantity that the client is trying to add to stock is greater than what can be physically accommodated in the Warehouse
+        // The quantity that the client is trying to add to stock is greater than what can be physically accommodated
+        // in the Warehouse
         if ((availableStock + quantity) > maxStockThreshold) {
-            // For now, this method only adds new units up maximum stock threshold. In an expanded version of this application, we
-            // could include tracking for the remaining units and store information about overstock elsewhere.
+            // For now, this method only adds new units up maximum stock threshold.
+            // In an expanded version of this application, we could include tracking for the remaining units and store
+            // information about overstock elsewhere.
             availableStock += (maxStockThreshold - availableStock);
         } else {
             availableStock += quantity;
